# test-rs-cross

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: release.yml
run/: build  main
src/: cli.rs  config.rs  main.rs  ui.rs
src/checks/: brew.rs  curl.rs  git.rs  git_lfs.rs  gxx.rs  libturbojpeg.rs  mod.rs  nix.rs  nix_flakes.rs  portaudio.rs  pre_commit_tool.rs  python_dev.rs  uv.rs  xcode_clt.rs
src/commands/: init.rs  new_app.rs
src/install_sequences/: linux_apt.rs  linux_nix.rs  macos_brew.rs  macos_nix.rs  mod.rs
src/questions/: mod.rs
src/subcommands/: init.rs  mod.rs  survey.rs
