[package]
name = "test-rs-cross"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dimos"
path = "src/main.rs"

[dependencies]
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
cliclack   = "0.3"
dirs       = "5"
serde      = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
which      = "6"
